Restart dialog, background en action bar toegevoegd.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,14 +4,11 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+    <include layout="@layout/actionbar"/>
 
     <nl.bjornhoogland.connect4.PlayBoard
         android:id="@+id/playboard"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent" />
 
 </LinearLayout>
