--- a/res/layout/actionbar.xml
+++ b/res/layout/actionbar.xml
@@ -4,10 +4,10 @@
     <LinearLayout style="@style/ActionBarCompat">
 
         <TextView
-            android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dip"
             android:text="@string/title"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/blue" />
