--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,8 @@
 
     <nl.bjornhoogland.connect4.PlayBoard
         android:id="@+id/playboard"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
 </LinearLayout>
